# e_menino_ou_menina

./: .gitignore  db.sqlite3  pagina1.html  pagina2.html  pyproject.toml  teste.py
core/: admin.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_usuario_chave_pix.py  0003_remove_usuario_senha_usuario_groups_and_more.py  0004_aposta.py  0005_alter_aposta_aposta_valida_and_more.py  0006_remove_aposta_aposta_valida_aposta_status.py  0007_remove_aposta_comprovante_pagamento.py  0008_alter_usuario_options.py  0009_alter_usuario_chave_pix.py
core/static/css/: apostas.css  cadastro.css  login.css
core/static/js/: apostas.js  cadastro.js  login.js
core/templates/: apostas.html  cadastro.html  login.html
core/templates/admin/core/aposta/: change_list.html
django1/: settings.py  urls.py
