[project]
name = "e_menino_ou_menina" # Ajuste o nome conforme seu projeto
version = "0.1.0"
authors = [{ name = "Emerson Bruno", email = "bruno.dqueiroz@gmail.com" }]
requires-python = ">=3.8"

dependencies = [
    "pandas",
    "openpyxl",
    "requests",
    # Adicione outras dependências aqui
    "django>=4.2.21",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy"
]

[tool.ruff]
line-length = 88
target-version = "py312" # Ajuste para a versão do seu Python
