[project]
name = "e_menino_ou_menina" # Ajuste o nome conforme seu projeto
version = "0.1.0"
authors = [{ name = "Emerson Bruno", email = "bruno.dqueiroz@gmail.com" }]
requires-python = ">=3.8"

dependencies = [
    "pandas",
    "openpyxl",
    "requests",
    # Adicione outras dependências aqui
    "django>=4.2.21",
    "mysqlclient>=2.2.7",
    "pix-python>=1.0.1",
    "qrcode[pil]>=7.4.2",
    "pypix>=0.1.6",
    "brcode>=1.2",
    "pixqrcodegen>=0.5",
    "pillow>=10.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy"
]

[tool.ruff]
line-length = 88
target-version = "py312" # Ajuste para a versão do seu Python
